--- a/Temprature/Temprature.vcxproj
+++ b/Temprature/Temprature.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{AC45BC94-366E-4DCA-BF80-AD7D14E5BDCA}</ProjectGuid>
     <RootNamespace>Temprature</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>Temperature</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
